[package]
name = "rpc"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
